force-app/main/default/objects/PAF_Corp_CAR__c/PAF_Corp_CAR__c.object-meta.xml
<CustomObject>
    <label>PAF Corp CAR</label>
    <nameField>
        <displayFormat>CAR-{00000}</displayFormat>
        <label>PAF Corp CAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAF Corp CAR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>