force-app/main/default/objects/PAF_Corp_CAR__c/fields/Car_Drop_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Drop_Off_Date__c</fullName>
    <label>Car Drop Off Date</label>
    <type>DateTime</type>
</CustomField>