force-app/main/default/objects/PAF_Corp_CAR__c/fields/Car_Margin__c.field-meta.xml
<CustomField>
    <fullName>Car_Margin__c</fullName>
    <formula>Total_Cost__c -  Driveaway_Nett__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>