force-app/main/default/objects/PAF_Corp_CAR__c/fields/Car_Pick_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Car_Pick_Up_Date__c</fullName>
    <label>Car Pick Up Date</label>
    <type>DateTime</type>
</CustomField>