force-app/main/default/objects/PAF_Corp_CAR__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>