force-app/main/default/objects/PAF_Corp_CAR__c/fields/Car_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Car_Vendor__c</fullName>
    <label>Car Vendor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>