force-app/main/default/objects/PAF_Corp_CAR__c/fields/Driveaway_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Driveaway_Booking_Number__c</fullName>
    <label>Driveaway Booking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>