force-app/main/default/objects/PAF_Corp_CAR__c/fields/Driveaway_Nett__c.field-meta.xml
<CustomField>
    <fullName>Driveaway_Nett__c</fullName>
    <label>Driveaway Nett</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>