force-app/main/default/objects/PAF_Corp_CAR__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>Car_Drop_Off_Date__c -  Car_Pick_Up_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>