force-app/main/default/objects/PAF_Corp_CAR__c/fields/PAF_Corp_Travel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>PAF_Corp_Travel_Bookings__c</fullName>
    <label>PAF Corp Travel Bookings</label>
    <referenceTo>PAF_Corp_Travel_Bookings__c</referenceTo>
    <relationshipLabel>PAF Corp CAR</relationshipLabel>
    <relationshipName>CAR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>